force-app/main/default/objects/cgcloud__Vehicle__c/cgcloud__Vehicle__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the vehicle object.</description>
    <label>Vehicle</label>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>