force-app/main/default/objects/cgcloud__Vehicle__c/fields/cgcloud__License_Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__License_Plate_Number__c</fullName>
    <description>License Plate Number of the Vehicle.</description>
    <label>License Plate Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>