force-app/main/default/objects/cgcloud__Vehicle__c/fields/cgcloud__Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Vehicle_Type__c</fullName>
    <description>Specifies the vehicle specific speed profiles which are used in the external ptv tool for route optimization.</description>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Car</fullName>
                <default>true</default>
                <label>Car</label>
            </value>
            <value>
                <fullName>TruckSlow</fullName>
            </value>
            <value>
                <fullName>TruckFast</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>